@@ -73,6 +73,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #6258: Support AMD64 in bdist_msi.
+
 - Fix a bug in the trace module where a bytes object from co_lnotab had its
   items being passed through ord(). (Fixes Issue #3821)
 
